--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,10 +1,157 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Dashboard">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_170sdp"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="@color/themecolor">
+
+        <LinearLayout
+            android:layout_width="@dimen/_75sdp"
+            android:layout_height="@dimen/_75sdp"
+            android:background="@drawable/square">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/splashservice"
+                android:layout_margin="@dimen/_9sdp"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ServiceProvider Admin"
+            android:textSize="@dimen/_20sdp"
+            android:gravity="center"
+            android:fontFamily="@font/poppins"
+            android:textColor="@color/white"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Mange full application from here"
+            android:textSize="@dimen/_15sdp"
+            android:fontFamily="@font/poppins"
+            android:textColor="@color/white"
+            android:gravity="center"/>
+
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="@dimen/_9sdp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/background"
+                    android:text="Create Category"
+                    android:layout_marginRight="@dimen/_9sdp"
+                    android:textSize="@dimen/_20sdp"
+                    android:fontFamily="@font/poppins"
+                    android:textColor="@color/white"
+                    android:padding="@dimen/_9sdp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/background"
+                    android:text="Manage Services"
+                    android:textSize="@dimen/_20sdp"
+                    android:fontFamily="@font/poppins"
+                    android:textColor="@color/white"
+                    android:padding="@dimen/_9sdp"
+                    android:layout_weight="1"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="@dimen/_9sdp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/background"
+                    android:text="All Bookings"
+                    android:layout_marginRight="@dimen/_9sdp"
+                    android:textSize="@dimen/_20sdp"
+                    android:fontFamily="@font/poppins"
+                    android:textColor="@color/white"
+                    android:padding="@dimen/_9sdp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/background"
+                    android:text="Create Slider image"
+                    android:textSize="@dimen/_20sdp"
+                    android:fontFamily="@font/poppins"
+                    android:textColor="@color/white"
+                    android:padding="@dimen/_9sdp"
+                    android:layout_weight="1"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="@dimen/_9sdp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/background"
+                    android:text="Create Notification"
+                    android:layout_marginRight="@dimen/_9sdp"
+                    android:textSize="@dimen/_20sdp"
+                    android:fontFamily="@font/poppins"
+                    android:textColor="@color/white"
+                    android:padding="@dimen/_9sdp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/background"
+                    android:text="Manage Login"
+                    android:textSize="@dimen/_20sdp"
+                    android:fontFamily="@font/poppins"
+                    android:textColor="@color/white"
+                    android:padding="@dimen/_9sdp"
+                    android:layout_weight="1"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+</LinearLayout>
