--- a/app/src/main/res/layout/activity_create_category.xml
+++ b/app/src/main/res/layout/activity_create_category.xml
@@ -1,10 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Category.CreateCategory">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginBottom="@dimen/_9sdp"
+        android:background="@color/themecolor">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Create Category"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_20sdp"
+            android:fontFamily="@font/poppins"/>
+
+    </Toolbar>
+
+    <LinearLayout
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
+        android:background="@drawable/circle"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/_9sdp">
+
+        <ImageView
+            android:id="@+id/imageViewProfile"
+            android:layout_width="@dimen/_60sdp"
+            android:layout_height="@dimen/_60sdp"
+            android:src="@drawable/splashservice"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/_29sdp"/>
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/buttonSelectImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select Image"
+        android:fontFamily="@font/poppins"
+        android:layout_gravity="center"/>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter Category"
+        android:layout_margin="@dimen/_9sdp">
+
+        <EditText
+            android:id="@+id/categoryname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/sourgummy"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/buttonUploadData"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Create Category"
+        android:fontFamily="@font/poppins"
+        android:background="@drawable/btn"
+        android:layout_marginHorizontal="@dimen/_9sdp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/recyler"
+        android:layout_margin="@dimen/_9sdp"/>
+
+    <TextView
+        android:id="@+id/emptyarraylist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Please Add Category"
+        android:textSize="@dimen/_25sdp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        android:fontFamily="@font/poppins"
+        android:textColor="@color/black"
+        android:layout_margin="@dimen/_9sdp"
+        android:gravity="center"/>
+
+</LinearLayout>
