--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.ServiceProviderAdmin" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
+        <item name="colorPrimary">@color/themecolor</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:statusBarColor">@color/themecolor</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <style name="Theme.ServiceProviderAdmin" parent="Base.Theme.ServiceProviderAdmin" />
