--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -77,6 +77,7 @@
                     android:layout_weight="1"/>
 
                 <TextView
+                    android:id="@+id/manageservice"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/background"
