--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -97,6 +97,7 @@
                 android:layout_margin="@dimen/_9sdp">
 
                 <TextView
+                    android:id="@+id/allbokings"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/background"
