ServiceProvider Admin App

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -76,6 +76,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Create"
+                        android:gravity="center"
                         android:layout_marginTop="@dimen/_9sdp"
                         android:textSize="@dimen/_20sdp"
                         android:fontFamily="@font/poppins"
@@ -86,6 +87,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Category"
+                        android:gravity="center"
                         android:textSize="@dimen/_20sdp"
                         android:fontFamily="@font/poppins"
                         android:textColor="@color/white"
@@ -106,6 +108,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Manage"
+                        android:gravity="center"
                         android:layout_marginTop="@dimen/_9sdp"
                         android:textSize="@dimen/_20sdp"
                         android:fontFamily="@font/poppins"
@@ -116,6 +119,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Service"
+                        android:gravity="center"
                         android:textSize="@dimen/_20sdp"
                         android:fontFamily="@font/poppins"
                         android:textColor="@color/white"
@@ -145,6 +149,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="All"
+                        android:gravity="center"
                         android:layout_marginTop="@dimen/_9sdp"
                         android:textSize="@dimen/_20sdp"
                         android:fontFamily="@font/poppins"
@@ -155,6 +160,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Bookings"
+                        android:gravity="center"
                         android:textSize="@dimen/_20sdp"
                         android:fontFamily="@font/poppins"
                         android:textColor="@color/white"
@@ -175,6 +181,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Create"
+                        android:gravity="center"
                         android:layout_marginTop="@dimen/_9sdp"
                         android:textSize="@dimen/_20sdp"
                         android:fontFamily="@font/poppins"
@@ -185,6 +192,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Slider"
+                        android:gravity="center"
                         android:textSize="@dimen/_20sdp"
                         android:fontFamily="@font/poppins"
                         android:textColor="@color/white"
@@ -214,6 +222,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Create"
+                        android:gravity="center"
                         android:layout_marginTop="@dimen/_9sdp"
                         android:textSize="@dimen/_20sdp"
                         android:fontFamily="@font/poppins"
@@ -224,6 +233,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Notification"
+                        android:gravity="center"
                         android:textSize="@dimen/_20sdp"
                         android:fontFamily="@font/poppins"
                         android:textColor="@color/white"
@@ -244,6 +254,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Manage"
+                        android:gravity="center"
                         android:layout_marginTop="@dimen/_9sdp"
                         android:textSize="@dimen/_20sdp"
                         android:fontFamily="@font/poppins"
@@ -254,6 +265,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Login"
+                        android:gravity="center"
                         android:textSize="@dimen/_20sdp"
                         android:fontFamily="@font/poppins"
                         android:textColor="@color/white"
