--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -64,7 +64,7 @@
                 android:layout_margin="@dimen/_9sdp">
 
                 <LinearLayout
-                    android:id="@+id/category"
+                    android:id="@+id/categorys"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/background"
@@ -97,7 +97,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/manageservice"
+                    android:id="@+id/manageservices"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/background"
@@ -137,7 +137,7 @@
                 android:layout_margin="@dimen/_9sdp">
 
                 <LinearLayout
-                    android:id="@+id/allbokings"
+                    android:id="@+id/allbokingss"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/background"
@@ -170,7 +170,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/slider"
+                    android:id="@+id/sliders"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/background"
@@ -210,7 +210,7 @@
                 android:layout_margin="@dimen/_9sdp">
 
                 <LinearLayout
-                    android:id="@+id/notification"
+                    android:id="@+id/notifications"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/background"
@@ -243,7 +243,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/login"
+                    android:id="@+id/logins"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/background"
